--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
 		"eslint-config-prettier": "^8.3.0",
 		"prettier": "^2.4.1",
 		"typescript": "^4.4.4"
+	},
+	"dependencies": {
+		"@types/express": "^4.17.13",
+		"discord.js": "^13.2.0",
+		"express": "^4.17.1"
 	}
 }
