--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {
 		"@types/express": "^4.17.13",
+		"cors": "^2.8.5",
 		"discord.js": "^13.2.0",
 		"express": "^4.17.1"
 	}
